# InfiniLM

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
causal-lm/: Cargo.toml  README.md
causal-lm/src/: decoding.rs  lib.rs  query_context.rs  sample.rs
common/: Cargo.toml
common/src/: between_f32.rs  blob.rs  gguf.rs  lib.rs  safe_tensors.rs  test_model.rs
demo/: Cargo.toml
demo/src/: main.rs
devices/cambricon-mlu/: Cargo.toml
devices/cambricon-mlu/src/: lib.rs
devices/common/: Cargo.toml
devices/common-cpu/: Cargo.toml
devices/common-cpu/src/: lib.rs
devices/common/src/: lib.rs
devices/cpu/: Cargo.toml  build.rs
devices/cpu/src/: fused_softmax.rs  lib.rs  mat_mul.rs  rms_norm.rs  rotary_embedding.rs  swiglu.rs
devices/nvidia/: Cargo.toml  build.rs
devices/nvidia-gpu/src/: sample.rs
devices/nvidia/src/: fused_softmax.cuh  fused_softmax.rs  lib.rs  reform.rs  rms_norm.cuh  rms_norm.rs  rotary_embedding.rs  sample.cu  swiglu.rs
kernel-lib/: Cargo.toml
kernel-lib/src/: blas.rs  lib.rs
model-parameters/: Cargo.toml
model-parameters/src/: data_type.rs  lib.rs  save.rs  storage.rs
model-parameters/src/memory/: cast.rs  inside_memory.rs  mod.rs  realloc.rs  safe_tensors.rs
model-parameters/src/safe_tensors/: config.rs  mod.rs
models/llama/: Cargo.toml
models/llama-legacy/: Cargo.toml
models/llama-legacy/src/: distribute.rs  lib.rs  memory.rs  safe_tensors.rs  storage.rs
models/llama/cambricon-mlu/: Cargo.toml
models/llama/cambricon-mlu/src/: lib.rs  resource.rs
models/llama/common/: Cargo.toml
models/llama/common-cpu/: Cargo.toml
models/llama/common/src/: compute.rs  json.rs  lib.rs  load.rs  save.rs
models/llama/cpu/: Cargo.toml  build.rs
models/llama/cpu/src/: lib.rs
models/llama/cpu/src/kernel/: rotary_embedding.rs
models/llama/nvidia/: Cargo.toml  build.rs
models/llama/nvidia-distributed/: Cargo.toml  build.rs
models/llama/nvidia-distributed/src/: lib.rs  parameters.rs
models/llama/nvidia-gpu/: Cargo.toml
models/llama/nvidia-gpu-distributed/: Cargo.toml  build.rs
models/llama/nvidia-gpu-distributed/src/: lib.rs
models/llama/nvidia-gpu/src/: lib.rs  resource.rs
models/llama/nvidia/src/: lib.rs  resource.rs
models/llama/src/: cast.rs  compute.rs  lib.rs  load.rs
models/mixtral/common/: Cargo.toml
models/mixtral/common/src/: config.rs  lib.rs  params.rs
models/mixtral/cpu/: Cargo.toml
models/mixtral/cpu/src/: infer.rs  lib.rs
nvidia/common/: Cargo.toml
nvidia/common/src/: fused_softmax.rs  gather.rs  lib.rs  mat_mul.rs  reform.rs  rms_norm.cuh  rms_norm.rs  rotary_embedding.rs  sample.cu  sample.rs  storage.rs  swiglu.rs
nvidia/distributed/: Cargo.toml  build.rs
nvidia/distributed/src/: distribute.rs  gather.rs  lib.rs  parameters.rs
nvidia/transformer/: Cargo.toml  build.rs
nvidia/transformer/src/: lib.rs  parameters.rs  sample.rs
sample/: Cargo.toml
sample/src/: lib.rs  sample.rs
service/: Cargo.toml  build.rs
service/src/: batcher.rs  cpu.rs  dispatch.rs  lib.rs  new.rs  nvidia.rs  sentence.rs  session.rs  task.rs  template.rs
service/src/session/: cache.rs  dialog.rs  dispatch.rs  mod.rs  task.rs
tensor/: Cargo.toml
tensor/src/: blob.rs  broadcast.rs  compatibility.rs  data_type.rs  fmt.rs  iter.rs  lib.rs  pattern.rs  physical_cell.rs  slice.rs  split.rs  tensor.rs
tensor/src/operator/: broadcast.rs  mod.rs  slice.rs  split.rs  squeeze.rs  transpose.rs
tensor/src/transform/: mod.rs  reshape.rs  slice.rs  split.rs  transpose.rs
tokenizer/: Cargo.toml
tokenizer/src/: bpe.rs  lib.rs  normalizer.rs  vocab_txt.rs
transformer/: Cargo.toml
transformer-cpu/: Cargo.toml  build.rs
transformer-cpu/src/: cache.rs  kernel.rs  lib.rs  sample.rs  storage.rs
transformer-cpu/src/kernel/: fused_softmax.rs  gather.rs  mat_mul.rs  mod.rs  rms_norm.rs  rotary_embedding.rs  swiglu.rs
transformer-nvidia/: Cargo.toml
transformer-nvidia/src/: cache.rs  lib.rs  page_locked_memory.rs  parameters.rs  sample.rs  storage.rs
transformer-nvidia/src/kernel/: fused_softmax.cuh  fused_softmax.rs  gather.rs  mat_mul.rs  mod.rs  reform.cuh  reform.rs  rms_norm.cuh  rms_norm.rs  rotary_embedding.cuh  rotary_embedding.rs  swiglu.cuh  swiglu.rs
transformer/src/: blas.rs  buffer.rs  cache.rs  host_memory.rs  kernels.rs  lib.rs  pos.rs  request.rs  sample.rs
transformer/src/parameters/: cast.rs  distribute.rs  memory.rs  mod.rs  safe_tensors.rs  save.rs  storage.rs
web-api/: Cargo.toml  README.md
web-api/src/: handlers.rs  lib.rs  main.rs  manager.rs  response.rs  schemas.rs
web-api/src/handlers/: cancel_handler.rs  infer_handler.rs  mod.rs
xtask/: Cargo.toml  build.rs
xtask/src/: cast.rs  chat.rs  common.rs  deploy.rs  generate.rs  main.rs  service.rs
xtask/src/service/: channel.rs  chat.rs  cpu.rs  mod.rs  nvidia.rs
