[workspace]
members = [
    "common",
    "tensor",
    "tokenizer",
    "causal-lm",
    "sample",
    "service",
    "web-api",
    "xtask",

    "devices/common",
    "devices/cpu",
    "devices/nvidia",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/nvidia-gpu",
    "models/llama/nvidia-gpu-distributed",
    "models/llama/cambricon-mlu",
    "models/mixtral/common",
    "models/mixtral/cpu",
]
resolver = "2"

[workspace.dependencies]
half = "2.4"
log = "0.4"
itertools = "0.13"
serde = "1.0"
serde_json = "1.0"
memmap2 = "0.9"
rayon = "1.10"
tokio = { version = "1.38", features = ["rt-multi-thread", "sync"] }
build-script-cfg = "0.0"

operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "cac4307", default-features = false }

cuda = { git = "https://github.com/YdrMaster/cuda-driver", rev = "a4b3cf5" }
nccl = { git = "https://github.com/YdrMaster/cuda-driver", rev = "a4b3cf5" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "a4b3cf5" }

cndrv = { git = "https://github.com/YdrMaster/cndrv", rev = "d94e170" }
search-neuware-tools = { git = "https://github.com/YdrMaster/cndrv", rev = "d94e170" }
