[package]
name = "model-parameters"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
half.workspace = true
rayon = "1.9"
memmap2 = "0.9"
safetensors = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
