[package]
name = "service"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
tokenizer = { path = "../tokenizer" }
transformer = { path = "../transformer" }
transformer-cpu = { path = "../transformer-cpu" }
transformer-nvidia = { path = "../transformer-nvidia", optional = true }
half.workspace = true
log.workspace = true

[build-dependencies]
find_cuda_helper.workspace = true

[dev-dependencies]
colored = "2.1"

[features]
nvidia = ["transformer-nvidia"]
