[package]
name = "service"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
tokenizer = { path = "../tokenizer" }
causal-lm = { path = "../causal-lm" }
transformer = { path = "../transformer" }
transformer-cpu = { path = "../transformer-cpu" }
transformer-nv = { path = "../nvidia/transformer", optional = true }
distributed = { path = "../nvidia/distributed", optional = true }
half.workspace = true
log.workspace = true
tokio.workspace = true

[build-dependencies]
search-cuda-tools.workspace = true

[dev-dependencies]
colored = "2.1"
tokio = { workspace = true, features = ["time"] }

[features]
nvidia = ["transformer-nv", "distributed"]
