[package]
name = "transformer-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
model-parameters = { path = "../model-parameters" }
gemm = "0.17"

[dev-dependencies]
tokenizer = { path = "../tokenizer" }
