[package]
name = "transformer-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
transformer = { path = "../transformer" }
gemm = "0.17"
intel-mkl-src = "0.8"

[build-dependencies]
intel-mkl-tool = "0.8"
