[package]
name = "transformer-cpu"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
causal-lm = { path = "../causal-lm" }
transformer = { path = "../transformer" }
itertools = "0.12"
gemm = "0.17"
intel-mkl-src = { version = "0.8", features = ["mkl-dynamic-lp64-iomp"] }

[build-dependencies]
intel-mkl-tool = "0.8"
