[package]
name = "web-api"
version = "0.0.1"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

[dependencies]
causal-lm = { path = "../causal-lm" }
service = { path = "../service" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
futures = "0.3"
actix-web = "4.5"
