[package]
name = "web-api"
version = "0.0.1"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

[dependencies]
causal-lm = { path = "../causal-lm" }
service = { path = "../service" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
log.workspace = true

hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
http-body-util = "0.1"
tokio-stream = "0.1"
