[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tensor = { path = "../tensor" }
causal-lm = { path = "../causal-lm" }
llama = { path = "../models/llama" }
transformer-cpu = { path = "../transformer-cpu" }
transformer-nv = { path = "../nvidia/transformer", optional = true }
distributed = { path = "../nvidia/distributed", optional = true }
service = { path = "../service" }
web-api = { path = "../web-api" }
log.workspace = true
tokio.workspace = true
simple_logger = "4.3"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
search-cuda-tools.workspace = true

[features]
default = ["nvidia"]
nvidia = ["transformer-nv", "distributed"]
