[package]
name = "common-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
tensor = { path = "../../tensor" }
kernel-lib = { path = "../../kernel-lib" }
gemm = "0.18"
intel-mkl-src = { version = "0.8", features = ["mkl-dynamic-lp64-iomp"] }
operators = { workspace = true, features = ["common-cpu"] }

[build-dependencies]
intel-mkl-tool = "0.8"
