[package]
name = "common-nv"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
tensor = { path = "../../tensor" }
sample = { path = "../../sample" }
kernel-lib = { path = "../../kernel-lib" }
cuda.workspace = true
rand = "0.8"
operators = { workspace = true, features = ["nvidia-gpu"] }

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools.workspace = true
cc = "1.0"
