[package]
name = "common-nv"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
tensor = { path = "../../tensor" }
sample = { path = "../../sample" }
llama = { path = "../../models/llama" }
kernel-lib = { path = "../../kernel-lib" }
cuda.workspace = true
cublas.workspace = true
log.workspace = true
rand = "0.8"

[build-dependencies]
search-cuda-tools.workspace = true
cc = "1.0"
