[package]
name = "distributed"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transformer = { path = "../../transformer" }
common-nv = { path = "../common" }
cuda.workspace = true
log.workspace = true
half.workspace = true

[dev-dependencies]
tokenizer = { path = "../../tokenizer" }

[build-dependencies]
find_cuda_helper.workspace = true
