[package]
name = "distributed"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
causal-lm = { path = "../../causal-lm" }
transformer = { path = "../../models/llama-legacy" }
common-nv = { path = "../common" }
nccl.workspace = true
log.workspace = true
itertools.workspace = true

[dev-dependencies]
simple_logger = "4.3"

[build-dependencies]
search-cuda-tools.workspace = true
