[package]
name = "transformer-nv"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
causal-lm = { path = "../../causal-lm" }
transformer = { path = "../../transformer" }
itertools = "0.12"
common-nv = { path = "../common" }
half.workspace = true

[dev-dependencies]
tokenizer = { path = "../../tokenizer" }

[build-dependencies]
search-cuda-tools.workspace = true
