[package]
name = "llama"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../../common" }
common-devices = { path = "../../../devices/common" }
tensor = { path = "../../../tensor" }
causal-lm = { path = "../../../causal-lm" }
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rayon.workspace = true
operators.workspace = true
