[package]
name = "llama-nv-distributed"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../../common" }
common-nv = { path = "../../../devices/nvidia-gpu" }
causal-lm = { path = "../../../causal-lm" }
llama = { path = "../common" }
nccl.workspace = true
log.workspace = true
itertools.workspace = true

[dev-dependencies]
simple_logger = "5.0"

[build-dependencies]
build-script-cfg.workspace = true
search-cuda-tools.workspace = true
