[package]
name = "mixtral"
version = "0.0.0"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../../common" }
tensor = { path = "../../../tensor" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
