[package]
name = "mixtral-cpu"
version = "0.0.0"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

[dependencies]
common = { path = "../../../common" }
tensor = { path = "../../../tensor" }
common-cpu = { path = "../../../devices/cpu" }
causal-lm = { path = "../../../causal-lm" }
mixtral = { path = "../common" }
itertools.workspace = true
