[package]
name = "mixtral-cpu"
version = "0.0.0"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

[dependencies]
common = { path = "../../../common" }
common-devices = { path = "../../../devices/common" }
common-cpu = { path = "../../../devices/cpu" }
tensor = { path = "../../../tensor" }
causal-lm = { path = "../../../causal-lm" }
mixtral = { path = "../common" }
itertools.workspace = true
operators.workspace = true
