[package]
name = "mixtral-cpu"
version = "0.0.0"
edition = "2021"
authors = ["Zezhong Pan <panzezhong@qiyuanlab.com>"]

[dependencies]
common = { path = "../../../common" }
common-cpu = { path = "../../../devices/common-cpu" }
tensor = { path = "../../../tensor" }
causal-lm = { path = "../../../causal-lm" }
mixtral = { path = "../common" }
itertools.workspace = true
